--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,14 @@
       name="description"
       content="Search for great repositories"
     />
+    <link rel="stylesheet" href="https://unpkg.com/primeicons/primeicons.css" />
     <link rel="stylesheet" href="https://unpkg.com/primereact/resources/themes/lara-light-indigo/theme.css" />
     <link rel="stylesheet" href="https://unpkg.com/primereact/resources/primereact.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/primeflex@2.0.0/primeflex.min.css" />
     <script src="https://unpkg.com/primereact/core/core.min.js"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Reposisaurus</title>
+    <title>Repo Runner</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
