--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://unpkg.com/primereact/resources/primereact.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/primeflex@2.0.0/primeflex.min.css" />
     <script src="https://unpkg.com/primereact/core/core.min.js"></script>
+    <script src="https://kit.fontawesome.com/bd2ba602ec.js" crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Repo Runner</title>
